# geometrie-discrete

TP1/: CMakeLists.txt  convexHull.cpp  main.cpp
TP2/: CMakeLists.txt  main.cpp  main_step2.cpp  main_step2_elimination.cpp  main_step4.cpp  main_step4_step5_step6.cpp
TP2/RiceGrains/: Rice_mixed2_seg_bin.pgm  Rice_mixed3_seg_bin.pgm
